add new legal statuses, refactor OAS calculation to accommodate
