# public/openapi.yaml
@@ -327,21 +327,17 @@ components:
     legalStatus:
       name: legalStatus
       in: query
-      description: >
-        The current legal status of the client.
-
-
-        _Note that all options are treated the same, except for "None of the above", which will be ineligible._
+      description: The current legal status of the client.
       required: false
-      example: Canadian Citizen
+      example: Canadian citizen
       schema:
         type: string
         enum:
-          - Canadian Citizen
-          - Permanent Resident
-          - Status Indian
-          - Temporary Resident
-          - None of the above
+          - Canadian citizen
+          - Permanent resident or landed immigrant (non-sponsored)
+          - Permanent resident or landed immigrant (sponsored)
+          - Indian status or status card
+          - Other
         description: The current legal status of the client.
       allowEmptyValue: false
 
